@startuml Database_Model_Zukii_Current
!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>
!define IDX(x) <color:blue>x</color>

title Modèle de base de données - Zukii (État Actuel Implémenté)

TABLE(User, "User") {
  PK(id): UUID
  IDX(email): VARCHAR(255) UNIQUE NOT NULL
  password_hash: VARCHAR(255) NOT NULL
  display_name: VARCHAR(100) NOT NULL
  FK(status_id): VARCHAR NOT NULL
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

TABLE(Status, "Status") {
  PK(id): VARCHAR PRIMARY KEY
  IDX(category_name): (category, name) UNIQUE
  category: VARCHAR(50) NOT NULL
  name: VARCHAR(50) NOT NULL
  is_active: BOOLEAN DEFAULT TRUE
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

TABLE(Board, "Board") {
  PK(id): UUID
  title: VARCHAR(200) NOT NULL
  description: TEXT
  FK(owner_id): UUID NOT NULL
  FK(status_id): VARCHAR NOT NULL
  background_color: VARCHAR(7) DEFAULT '#FFFFFF'
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

TABLE(BoardMember, "BoardMember") {
  PK(id): UUID
  FK(board_id): UUID NOT NULL
  FK(user_id): UUID NOT NULL
  IDX(unique_membership): (board_id, user_id) UNIQUE
  permission_level: ENUM('view', 'edit', 'admin') DEFAULT 'view'
  FK(status_id): VARCHAR NOT NULL
  FK(updated_by): UUID NULL
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

TABLE(SuperBlock, "SuperBlock") {
  PK(id): UUID
  FK(board_id): UUID NOT NULL
  title: VARCHAR(200) NOT NULL
  color: VARCHAR(7) DEFAULT '#6366f1'
  collapsed: BOOLEAN DEFAULT FALSE
  display_order: INTEGER DEFAULT 0
  FK(created_by): UUID NOT NULL
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
  IDX(board_order): (board_id, display_order)
}

TABLE(Block, "Block") {
  PK(id): UUID
  FK(board_id): UUID NOT NULL
  FK(created_by): UUID NOT NULL
  block_type: ENUM('text', 'file', 'analysis') NOT NULL
  title: VARCHAR(200)
  position_x: INTEGER NULL
  position_y: INTEGER NULL
  width: INTEGER DEFAULT 300
  height: INTEGER DEFAULT 200
  z_index: INTEGER DEFAULT 0
  FK(content_id): UUID NOT NULL
  FK(super_block_id): UUID NULL
  zone_type: VARCHAR(50) NULL
  FK(status_id): VARCHAR NOT NULL
  FK(last_modified_by): UUID NULL
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
  IDX(board_spatial): (board_id, position_x, position_y)
  IDX(content_lookup): (content_id, block_type)
  IDX(super_block): (super_block_id)
}

TABLE(BlockRelation, "BlockRelation") {
  PK(id): UUID
  FK(source_block_id): UUID NOT NULL
  FK(target_block_id): UUID NOT NULL
  relation_type: ENUM('generated_from', 'comment_on', 'references', 'derived_from') NOT NULL
  FK(created_by): UUID NOT NULL
  IDX(unique_relation): (source_block_id, target_block_id, relation_type) UNIQUE
  IDX(source_relations): (source_block_id)
  IDX(target_relations): (target_block_id)
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

TABLE(TextContent, "TextContent") {
  PK(id): UUID
  content: TEXT NOT NULL
  format_type: ENUM('plain', 'markdown', 'html') DEFAULT 'plain'
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

TABLE(FileContent, "FileContent") {
  PK(id): UUID
  file_name: VARCHAR(255) NOT NULL
  mime_type: VARCHAR(100) NOT NULL
  file_size: BIGINT NOT NULL
  base64_data: TEXT NOT NULL
  md5_hash: VARCHAR(32) NOT NULL
  file_type: VARCHAR(50) DEFAULT 'csv'
  created_at: TIMESTAMP DEFAULT NOW()
  updated_at: TIMESTAMP DEFAULT NOW()
}

User ||--o{ Board : "owner_id"
User ||--o{ BoardMember : "user_id"
User ||--o{ SuperBlock : "created_by"
User ||--o{ Block : "created_by"
User ||--o{ Block : "last_modified_by"
User ||--o{ BlockRelation : "created_by"

Board ||--o{ BoardMember : "board_id"
Board ||--o{ SuperBlock : "board_id"
Board ||--o{ Block : "board_id"

SuperBlock ||--o{ Block : "super_block_id"

Block ||--o{ BlockRelation : "source_block_id"
Block ||--o{ BlockRelation : "target_block_id"

Status ||--o{ User : "status_id"
Status ||--o{ Board : "status_id"
Status ||--o{ BoardMember : "status_id"
Status ||--o{ Block : "status_id"

Block ||--|| TextContent : "content_id (type=text)"
Block ||--|| FileContent : "content_id (type=file)"

@enduml 